--- a/src/app/(main)/_components/posts/editor/styles.css
+++ b/src/app/(main)/_components/posts/editor/styles.css
@@ -1,6 +1,8 @@
 .tiptap p.is-editor-empty:first-child::before {
   color: theme("colors.muted.foreground");
   content: attr(data-placeholder);
+  font-size: theme("fontSize.sm");
+  @apply text-pretty;
   float: left;
   height: 0;
   pointer-events: none;
