--- a/src/app/(main)/_components/comments/comment.css
+++ b/src/app/(main)/_components/comments/comment.css
@@ -12,6 +12,10 @@
     z-index: 2;
   }
 
+  .comment-avatar {
+    position: relative;
+    z-index: 2;
+  }
   .comment-avatar-wrap::after {
     position: absolute;
     top: 0;
@@ -40,8 +44,8 @@
     border-inline-start: var(--line-sz) solid var(--line-clr);
     border-end-start-radius: var(--line-corner-radius);
     top: 15%;
-    transform: translateY(-45%);
-    left: -102%;
-    z-index: -2;
+    left: 2px;
+    transform: translateY(-45%) translateX(-100%);
+    z-index: -1;
   }
 }
