fix: update comment nesting style and reply position

--- a/src/app/(main)/_components/comments/comment.css
+++ b/src/app/(main)/_components/comments/comment.css
@@ -30,7 +30,7 @@
     inset-inline: 50%;
   }
 
-  .reply:last-child .comment-avatar-wrap::after {
+  .reply[data-hasreply="false"]:last-child .comment-avatar-wrap::after {
     display: none;
   }
 
